--- a/sass/layout/_events.scss
+++ b/sass/layout/_events.scss
@@ -19,6 +19,10 @@
     }
 
     .m-events__imgBox {
+       
+            width: 100%;
+            overflow: hidden;
+        
         position: relative;
         margin-right: auto;
         margin-left: auto;
