--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -36,8 +36,10 @@
         
         &__imgBox {
             position: relative;
+            width: 100%;
+            overflow: hidden;
             @media only screen and (min-width: 55em) {
-                width: 655px;
+                max-width: 655px;
                 margin-right: auto;
                 margin-left: auto;
             }
